--- a/JAVASCRIPT2/index2.html
+++ b/JAVASCRIPT2/index2.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>first javascript</title>
 </head>
 <body>
-$END$
+
+<button> 클릭해 주세요 </button>
+<script src="index2.js"> </script>
 </body>
 </html>
