--- a/JavaScript3/index3.html
+++ b/JavaScript3/index3.html
@@ -1,16 +1,31 @@
 <!doctype html>
-<html lang="ko">
+<html lang="kr">
 <head>
+    <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>first javascript</title>
+    <title>JAVAscript 선택자</title>
 </head>
 <body>
+<div id="myNumber">0</div>
+<div id="btns">
+    <div>
+        <button id="decrease">-</button>
+        <button id="increase">+</button>
+    </div>
+    <div>
+        <button class="color-btn red" data-color="#FF0000"></button>
+        <button class="color-btn orange" data-color="#FFA500"></button>
+        <button class="color-btn yellow" data-color="#FFFF00"></button>
+        <button class="color-btn green" data-color="#FF0000"></button>
+        <button class="color-btn blue" data-color="#FF0000"></button>
+        <button class="color-btn black" data-color="#FF0000"></button>
+        <button class="color-btn gray" data-color="#FF0000"></button>
+    </div>
+</div>
 
-    <button>클릭해 주세요</button>
-    <script src="index3.js">
-    </script>
+<script src="index.js"></script>
 </body>
 </html>
