--- a/test/index.html
+++ b/test/index.html
@@ -36,3 +36,19 @@ function checkText(){
 </body>
 
 </html>
+
+<!-- 
+
+1. 아이디 혹은 비밀번호 둘중 하나라도 입력란이 비어있다면,
+로그인 버튼이 '비활성화' 되어서 버특색이
+#9b9b9b로 설정하면 되고
+
+
+css에서 처음 로그인 버튼을 9b9b9b 로 변경.
+
+
+2. 사용자가 아이디와 비밀번호를 둘 다 입력하면
+로그인 버튼이 활성화 되어서 버튼의 배경색이 
+#1bbc9b로 바뀌면 됌.
+
+ -->
